using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringData
{
  public static string Idle = "Idle";
  public static string Walk = "Walk";
  public static string Sprint = "Sprint";
  public static string isDead = "isDead";
  public static string IsGrounded = "isGrounded";
  public static string IsInteracting = "isInteracting";
  public static string MoveSpeed = "moveSpeed";
  public static string MoveSpeedX = "moveSpeedX";
  public static string MoveSpeedY = "moveSpeedY";




}
