public static class StringData
{
    //tags 
    public static string PlayerTag = "Player";
    public static string EnemyTag = "Enemy";
    public static string Untagged = "Untagged";
    public static string Obstacle = "Obstacle";
    public static string PlayerWeaponTag = "PlayerWeapon";
    public static string TargetDetection = "TargetDetection";

    // animations
    public static string Idle = "Idle";
    public static string CombatIdle = "CombatIdle";
    public static string Walk = "Walk";
    public static string CombatWalk = "CombatWalk";
    public static string Sprint = "Sprint";
    public static string CombatSprint = "CombatSprint";
    public static string Talk = "Talk";
    public static string IsDead = "isDead";
    public static string Dead = "Dead";
    public static string State = "state";
    public static string IsSprinting = "isSprinting";
    public static string IsGrounded = "isGrounded";
    public static string IsJumping = "isJumping";
    public static string IsInteracting = "isInteracting";
    public static string MoveSpeed = "moveSpeed";
    public static string MoveSpeedX = "moveSpeedX";
    public static string MoveSpeedY = "moveSpeedY";
    public static string LightAttack01 = "LightAttack01";
    public static string LightAttack02 = "LightAttack02";
    public static string LightAttack03 = "LightAttack03";
    public static string HeavyAttack01 = "HeavyAttack01";
    public static string HeavyAttack02 = "HeavyAttack02";
    public static string HeavyAttack03 = "HeavyAttack03";
    public static string MagicAttack01 = "MagicAttack01";
    public static string MagicAttack02 = "MagicAttack02";
    public static string MagicAttack03 = "MagicAttack03";
    public static string LockOn = "lockOn";
    public static string IsRolling = "isRolling";
    public static string DiveRollForward = "DiveRollForward";
    public static string StrafeRoll = "StrafeRoll";
    public static string RollX = "rollX";
    public static string RollZ = "rollZ";
    public static string Popup = "Popup";



    // Enemy
    public static string EnemyMoveState = "state";
    public static string Attack01 = "Attack01";
    public static string Attack02 = "Attack02";

    // Scene Manager
    public static string ClearScreen = "ClearScreen";
    public static string BlackScreen = "BlackScreen";

    // Scene Names
    public static string MainMenuScene = "MainMenuScene";
    public static string CutSceneOne = "CutSceneOne";
    public static string LevelOneScene = "LevelOneScene";

    public static string TargetCamera = "TargetCamera";
    public static string FollowCamera = "FollowCamera";
}
